syntax = "proto3";

package location;

option go_package = "go-nauka/location-history-service/grpc/proto;proto";

service LocationHistoryService {
  rpc RecordLocation (LocationRequest) returns (LocationResponse);
}

message LocationRequest {
  string username = 1;
  double latitude = 2;
  double longitude = 3;
  string recorded_at = 4;
}

message LocationResponse {
  string status = 1;
}
